include $(top_srcdir)/Makefile_Common

EXTRA_DIST = 

pkglib_LTLIBRARIES = libsrxutil.la
libsrxutil_la_SOURCES = client_socket.c \
		     debug.c \
		     directory.c \
		     log.c \
		     multi_client_socket.c \
		     mutex.c \
		     packet.c \
		     plugin.c \
		     prefix.c \
		     rwlock.c \
		     server_socket.c \
		     slist.c \
		     socket.c \
		     str.c \
		     timer.c \
		     xml_out.c

noinst_HEADERS  = client_socket.h \
		  debug.h \
		  directory.h \
		  log.h \
		  math.h \
		  multi_client_socket.h \
		  mutex.h \
		  packet.h \
		  plugin.h \
		  prefix.h \
		  rwlock.h \
		  server_socket.h \
		  slist.h \
		  socket.h \
		  str.h \
		  test.h \
		  timer.h \
		  types.h \
		  xml_out.h

